2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/memory.h (grub_machine_mmap_iterate): Remove
	EXPORT_FUNC.
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* lib/posix_wrap/locale.h: Add missing file.
	Reported by: Seth Goldberg.

2010-04-10  Vladimir Serbinenko  <phcoder@gmail.com>

	grub-emu module load support.

	* Makefile.in (TARGET_NO_MODULES): New variable. All users of
	NO_DYNAMIC_MODULES switched to this.
	(TARGET_CFLAGS): Add -DGRUB_TARGET_NO_MODULES=1 if applicable.
	(CFLAGS): Likewise.
	* conf/any-emu.rmk: Generate symlist.
	(kernel_img_HEADERS): Add util/datetime.h.
	(kernel_img_HEADERS) [sdl]: Add sdl.h.
	(kernel_img_HEADERS) [libusb]: Add libusb.h.
	(kernel_img_SOURCES) [TARGET_NO_MODULES = no && !x86]: Add
	kern/$(target_cpu)/cache.S.
	* configure.ac (grub-emu-modules): New option.
	* genmk.rb: Handle multiple source lists.
	* include/grub/sdl.h: New file.
	* include/grub/libusb.h: Likewise.
	* util/grub-emu.c (main): Hanle (host) root.
	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Error with
	GRUB_ERR_UNKNOWN_DEVICE.
	* util/misc.c: Move mm functions to ...
	* util/mm.c: ... here. All users updated.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.in (RMKFILES): Search in srcdir and not current directory.
	(MAINTAINER_CLEANFILES): Don't add $(srcdir) to MKFILES. Add few
	missing files.
	(maintainer-clean): Remove libgcrypt-grub.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/efi/console.c (grub_console_checkkey): Macroify key contants.

2010-04-09  EFI Coder <eficoder@hotmail.com>

	* normal/menu_text.c (print_message): Clean up the message and show
	the Fn information when on EFI
	* term/efi/console.c (grub_console_checkkey): Add F4 support.

2010-04-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/autofs.c (read_fs_list): New parameter 'prefix'.
	All users updated.
	* normal/crypto.c (read_crypto_list): Likewise.